20230425 Home Review Ubunto Linux

--- a/Programming/Js/(뉴렉처) 자바스크립트 and DOM/dom/javascript1-dom.html
+++ b/Programming/Js/(뉴렉처) 자바스크립트 and DOM/dom/javascript1-dom.html
@@ -7,8 +7,80 @@
     <title>Document</title>
     <script src="javascript1-dom.js"></script>
 </head>
-
 <body>
+
+    <!-- EX5 --------------------------------------------------- -->
+    <section id="section5">
+        <h1>Ex5 : 엘리먼트 노드의 속성 변경</h1>
+        <div>
+            <input class="src-input" list="img-list"/>
+            <datalist id="img-list">
+                <option value="img1.jpg">img1</option>
+                <option value="img2.jpg">img2</option>
+                <option value="img3.jpg">img3</option>
+            </datalist>
+            <select class="img-select">
+                <option value="img1.jpg">img1</option>
+                <option value="img2.jpg">img2</option>
+                <option value="img3.jpg">img3</option>
+            </select>
+            <input class="change-button" type="button" value="변경하기" />
+        </div> 
+        <div>
+            <img class="img" src="images/img1.jpg" />
+        </div>
+    </section>
+
+    <!-- EX4 --------------------------------------------------- -->
+    <section id="section4">
+        <h1>Ex4 : childNodes를 이용한 노드 선택</h1>
+        <div class="box">
+            <input />
+            <input />
+        </div> 
+    </section>
+
+
+    <!-- EX3-2 --------------------------------------------------- -->
+    <section id="section3">
+        <h1>Ex3-2 : Selectors API Level1</h1>
+        <div>
+            <input name="x" class="txt-x" type="text" value="0" dir="rtl"/>
+            +
+            <input name="y" class="txt-y" type="text" value="0" dir="rtl"/>
+            <input name="btn-add" class="btn-add" type="button" value="="/>
+            <input name="sum" class="txt-sum" type="text" value="0" readonly dir="rtl"/>
+        </div> 
+    </section>
+
+
+    <!-- EX3 --------------------------------------------------- -->
+    <section id="section3">
+        <h1>Ex3 : Selectors API Level1</h1>
+        <div>
+            <input class="txt-x" type="text" value="0" dir="rtl"/>
+            +
+            <input class="txt-y" type="text" value="0" dir="rtl"/>
+            <input class="btn-add" type="button" value="="/>
+            <input class="txt-sum" type="text" value="0" readonly dir="rtl"/>
+        </div> 
+    </section>
+
+
+<!-- EX2 --------------------------------------------------- -->
+    <section id="section2">
+        <h1>Ex2 : 엘리먼트 선택방법 개선하기</h1>
+        <div>
+            <input class="txt-x" type="text" value="0" dir="rtl"/>
+            +
+            <input class="txt-y" type="text" value="0" dir="rtl"/>
+            <input class="btn-add" type="button" value="="/>
+            <input class="txt-sum" type="text" value="0" readonly dir="rtl"/>
+        </div> 
+    </section>
+
+
+<!-- EX1 --------------------------------------------------- -->
     <section>
         <h1>Ex1 : 계산기 프로그램</h1>
         <div>
@@ -16,8 +88,10 @@
             +
             <input id="txt-y" type="text" value="0" dir="rtl"/>
             <input id="btn-add" type="button" value="="/>
-            <input id="txt-sum" type="text" value="0" readonly dir="rtl"/>
+            <input id="txt-sum" type="text" value="0" readonly dir="rtl"/> 
         </div> 
     </section>
+
+
 </body>
 </html>
