--- a/Programming/Javascript/(뉴렉처) 자바스크립트 and DOM/dom/javascript2-event.html
+++ b/Programming/Javascript/(뉴렉처) 자바스크립트 and DOM/dom/javascript2-event.html
@@ -15,6 +15,24 @@
     </nav>
     <hr />
 
+    <section id="section6">
+        <h1>Ex6-마우스 이벤트 객체: 박스 옮기기-마우스 좌표 </h1>
+        <style>
+            .container{
+                width: 800px;
+                height: 400px;
+                border: 1px solid gray;
+            }
+            .box{
+                width: 100px;
+                height: 100px;
+                background: blue;    
+            }
+        </style>
+        <div class="container">
+            <div class="box"></div>
+        </div>
+    </section>
 
 
     <section id="section5">
