--- a/Programming/React/처음만난리액트/react-basic/Test/index.html
+++ b/Programming/React/처음만난리액트/react-basic/Test/index.html
@@ -10,8 +10,9 @@
         <div id="root"></div> 
 
         <!-- 리액트 가져오기 -->
-        <script src=""https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
-        <script src=""https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+        <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+        <!-- <script src="https://reactjs.org/link/react-devtools/react-dom.development.js" crossorigin></script> -->
+        <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
 
         <!-- 리액트 컴포넌트 가져오기 -->
         <script src="js/MyButton.js"></script>
